--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "bulma": "^0.9.2",
+        "bootstrap": "^5.0.0-beta2",
         "vue": "^2.6.12"
     }
 }
